--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             </div>
         </div>
     </header>
+
+    <div id="main-content"></div>
     <footer class="p-1 footer">
         <div class="container text-center">
             Copyright Ⓒ Bit Student 2023 Home edition
@@ -30,6 +32,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+    <script src="./js/data.js"></script>
+    <script src="./js/ui.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
