--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
 </head>
 
 <body>
-    <header class="p-1 header">
-        <div class="container">
-            <div class="d-flex justify-content-between">
-                <a href="./index.html">BitShow</a>
-                <input type="search" placeholder="Searech...">
+    <div id="wrapper">
+        <div id="header">
+            <div id="home-button">BitShow</div>
+            <div id="search-rwapper">
+                <input type="text" id="search-input">
+                <div id="search-dropdown"></div>
             </div>
         </div>
-    </header>
+        <div id="main-content"></div>
+    </div>
 
-    <div id="main-content"></div>
+    <div class="container text-center"><button class="btn">Load More</button></div>
+
     <footer class="p-1 footer">
         <div class="container text-center">
             Copyright Ⓒ Bit Student 2023 Home edition
