--- a/index.html
+++ b/index.html
@@ -9,24 +9,36 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/main.css">
+    <script src="https://code.jquery.com/jquery-3.6.3.js"
+        integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/themes/base/jquery-ui.min.css"
+        integrity="sha512-ELV+xyi8IhEApPS/pSj66+Jiw+sOT1Mqkzlh8ExXihe4zfqbWkxPRi8wptXIO9g73FSlhmquFlUOuMSoXz5IRw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
-    <div id="wrapper">
-        <div id="header">
+    <div class="container" id="wrapper">
+        <div class="container-fluid" id="header">
             <div id="home-button">BitShow</div>
             <div id="search-rwapper">
-                <input type="text" id="search-input">
-                <div id="search-dropdown"></div>
+                <div class="ui-widget">
+                    <input id="textsearch" class="form-control mr-sm-2" placeholder="Search..." aria-label="Search" />
+                </div>
             </div>
         </div>
-        <div id="main-content"></div>
+
+        <div class="container  d-flex justify-content-center" id="main-content">
+
+
+        </div>
+        <div id="detail"></div>
     </div>
 
-    <div class="container text-center"><button class="btn">Load More</button></div>
 
-    <footer class="p-1 footer">
-        <div class="container text-center">
+
+    <footer class="p-2 footer">
+        <div class="container-fluid text-center">
             Copyright Ⓒ Bit Student 2023 Home edition
         </div>
     </footer>
