--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <div class="container" id="wrapper">
+    <div class="container-fluid" id="wrapper">
         <div class="container-fluid" id="header">
             <div id="home-button">BitShow</div>
             <div id="search-rwapper">
@@ -32,14 +32,14 @@
 
 
         </div>
-        <div id="detail"></div>
+        <!-- <div id="detail"></div> -->
     </div>
 
 
 
     <footer class="p-2 footer">
         <div class="container-fluid text-center">
-            Copyright Ⓒ Bit Student 2023 Home edition
+            Copyright Ⓒ Bit Student 2023 Aleksandar edition
         </div>
     </footer>
 
